--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 dependencies:
   google_maps_flutter_web: ^0.3.3
   geolocator: ^8.2.1
+  logger: 1.0.0
   flutter:
     sdk: flutter
 
